--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,22 @@
-.main-logo {
-	width: 124px;
-	height: 34px;
-	margin-top: 22px;
-	text-indent: 100%;
-	vertical-align: left;
-	white-space: nowrap;
-	overflow: hidden;
+.svglogo {
+	width: 35%;
+    padding: 1rem;
+	margin-top: 2rem;
+    order: -1;
+/*
 	background-image: asset-url('main-logo.png') no-repeat;
 	background-size: 100%;
+*/
 }
 
+.flex-container{
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.item{
+  margin: auto;
+}
 
 .actions {
 	padding: 1rem;
@@ -19,10 +26,6 @@
 	padding: 1rem;
 }
 
-.svglogo {
-	padding: 1rem;
-	margin-top: 2rem;
-}
 
 
 
